--- a/src/css/Work.scss
+++ b/src/css/Work.scss
@@ -18,6 +18,10 @@
         position: absolute;
         border-radius: 5px;
         z-index: -1;
+
+        @media #{Media.$ipad-pro-portrait},#{Media.$iphone-portrait},#{Media.$iphone-landscape} {
+            left: 0%;
+        }
     }
   }
 
@@ -25,68 +29,8 @@
     to{transform: rotate(0); opacity: 1;}
   }
 
-.timeline-wrapper{
-    width: 50%;
-    height: fit-content;
-    position: relative;
 
-    &::after{
-        content: "";
-        position: absolute;
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        background: rgb(247, 245, 245);
-        top: 28px;
-        border: 4px solid #{Media.$bg-color-2};
-        z-index: 1;
-        right: -23px;
-    }
-}
-
-.right::after{
-    left: -15px;
-}
-
-.content{
-    position: relative;
-    border-radius: 5px;
-    margin: 30px 40px;
-    padding: 15px;
-    border: 2px solid #{Media.$bg-color-2};
-    background: #f9efea;
-    opacity: 0;
-}
-
-
-
-.shadow-left{
-    box-shadow: -5px 5px 10px #{Media.$bg-color-2};
-}
-
-.shadow-right{
-    box-shadow: 5px 5px 10px #{Media.$bg-color-2};
-}
-
-.slidein-left-animation{
-    opacity: 0;
-    transform: translateX(-100%);
-}
-
-.slidein-right-animation{
-    opacity: 0;
-    transform: translateX(100%);
-}
-
-@keyframes content-slideInLeft {
-    to{transform: translateX(0); opacity: 1;}
-}
-
-@keyframes content-slideInRight {
-    to{transform: translateX(0); opacity: 1;}
-}
-
-.left{
+  .left{
     left: 0;
 
     &::before{
@@ -116,5 +60,104 @@
         top: 32px;
         left: 25px;
     }
+
+    @media #{Media.$ipad-pro-portrait},#{Media.$iphone-portrait},#{Media.$iphone-landscape} {
+        left: 0;
+    }
 }
+
+
+.timeline-wrapper{
+    width: 50%;
+    height: fit-content;
+    position: relative;
+
+    &::after{
+        content: "";
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        background: rgb(247, 245, 245);
+        top: 28px;
+        border: 4px solid #{Media.$bg-color-2};
+        z-index: 1;
+        right: -23px;
+    }
+
+    @media #{Media.$ipad-pro-portrait},#{Media.$iphone-portrait},#{Media.$iphone-landscape} {
+        width: 100%;
+        &::before {
+            left: 25px;
+            border: 4px solid #{Media.$bg-color-2};
+            border-width: 15px 15px 15px 0;
+            border-color: transparent #{Media.$bg-color-2} transparent transparent;
+        }
+
+    }
+}
+
+.content{
+    position: relative;
+    border-radius: 5px;
+    margin: 30px 40px;
+    padding: 15px;
+    border: 2px solid #{Media.$bg-color-2};
+    background: #f9efea;
+    opacity: 0;
+}
+
+.shadow-left{
+    box-shadow: -5px 5px 10px #{Media.$bg-color-2};
+}
+
+.shadow-right{
+    box-shadow: 5px 5px 10px #{Media.$bg-color-2};
+}
+
+.slidein-left-animation{
+    opacity: 0;
+    transform: translateX(-100%);
+}
+
+.slidein-right-animation{
+    opacity: 0;
+    transform: translateX(100%);
+}
+
+@keyframes content-slideInLeft {
+    to{transform: translateX(0); opacity: 1;}
+}
+
+@keyframes content-slideInRight {
+    to{transform: translateX(0); opacity: 1;}
+}
+
+.right::after{
+    left: -15px;
+
+    @media #{Media.$ipad-pro-portrait},#{Media.$iphone-portrait},#{Media.$iphone-landscape} {
+        left: 0;
+    }
+}
+
+@media #{Media.$ipad-pro-portrait},#{Media.$iphone-portrait},#{Media.$iphone-landscape} {
+    .left::after, .right::after {
+        left: -15px;
+    }
+
+    .shadow-left{
+        box-shadow: 5px 5px 10px #{Media.$bg-color-2};
+    }
+
+    .slidein-left-animation{
+        opacity: 0;
+        transform: translateX(100%);
+    }
+}
+
+
+
+
+
   
