--- a/src/css/About.scss
+++ b/src/css/About.scss
@@ -36,7 +36,7 @@ section{
 
     @media #{Media.$iphone-portrait}{
         width: 100%;
-        font-size: calc(10px + 2vmin);
+        font-size: calc(10px + 2vmax);
         padding: 20px;
     }
     @media #{Media.$iphone-landscape}{
@@ -64,7 +64,7 @@ section{
         width: 10em;
     }
     @media #{Media.$iphone-portrait}, #{Media.$iphone-landscape}{
-        width: 6em;
+        width: calc(6em + 2vmax);
     }
 }
 
