--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -1,48 +1,56 @@
 @use 'Media';
 
+.Header{
+    display: grid;
+    width: 100%;
+    height: 5em;
+    position: fixed;
+    border-bottom: 1px solid rgb(203, 203, 203);
+    z-index: 10;
+    animation: slideInTop-head 2s ease-in-out;
+    margin-top: 5px;
+}
+
 #header{
     transition: .3s ease-in;
 }
 
-header{
-    animation: slideInTop-head 2s ease-in-out ;
-}
+// header{
+//     animation: slideInTop-head 2s ease-in-out ;
+// }
 
 .head-on-scroll{
-    height: 1.8em !important;
-    box-shadow: 0 0 14px 0 #b2b2b2 !important;
-    background-color: rgb(186 186 186 / 30%) !important;
+    height: 3.5em;
+    box-shadow: 0 0 14px 0 #b2b2b2;
+    background-color: rgb(186 186 186 / 30%);
 }
 
 header{
     animation: 1.5s ease-out 0s 1 slideInTop-head;
 }
 
-#header {
+.head-wrapper {
     // background-color: rgba(230, 230, 230, 0.58);
     width: 100%;
-    height: 2.2em;
-    font-size: calc(10px + 2vmin);
+    font-size: calc(8px + 2vmin);
     color: #{Media.$font-dark};
     display: flex;
     gap: .5em;
-    position: fixed;
+    position: relative;
     // background-color: rgb(255 255 255 / 30%);
     border-bottom: 1px solid rgb(207, 207, 207);
     backdrop-filter: blur(10px);
     justify-content: space-between;
     align-items: center;
-    margin-top: 5px;
     z-index: 10;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 0 20px;
+    transition: .3s ease-in;
 }
 
 #nav-button{
     display: none;
-    margin-right: 10%;
-}
-
-#smodi{
-    margin-left: 20%;
 }
 
 #progress-bar-wrapper{
@@ -62,24 +70,14 @@ header{
 
 //Ipad Pro Landscape
 @media #{Media.$ipad-pro-landscape}{
-    #smodi {
-        margin-left: 10%;
-    }
+
     .nav-link-wrap{
-        padding-right: 10%;
         margin: 0;
     }
     #avatar{
         max-width: 20em;
     }
-  }
-
-  //Ipad Pro Potrait
-  @media #{Media.$ipad-pro-portrait}{
-    #smodi {
-        margin-left: 10%;
-    }
-  }
+}
 
 @media screen and (min-width:75em) {
     .App-header {
