--- a/src/css/HomeStyle.scss
+++ b/src/css/HomeStyle.scss
@@ -200,8 +200,9 @@
 
 @keyframes avatarScaleIn {
   0%{transform: scale(.2);
-      }
+      opacity: 0;}
   100%{transform: scale(1);
+        opacity: 1;
   }
 }
 
