Pushing latest changes

--- a/src/css/HomeStyle.scss
+++ b/src/css/HomeStyle.scss
@@ -247,9 +247,8 @@
 
 .top-scroll-wrapper{
   border-radius: 5px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  width: 2.5rem;
+  height: 2.5rem;
   text-align: center;
   position: fixed;
   bottom: 70px;
@@ -258,30 +257,23 @@
   display: grid;
   transition: 2s;
   filter: drop-shadow(2px 4px 6px rgb(152, 150, 150));
-  right: 1em;
-  transform: translateX(150%);
-  transition: 1s;
+  right: -100%;
+  // transform: translateX(150%);
+  transition: 2s ease;
 }
 
 .top-scroll{
-  animation: top-scroll 1.5s linear 2.5s infinite;
+  margin: auto;
+  animation: top-scroll-arrow 1.5s linear 2.5s infinite;
   img{
-    width: 2em;
-    height: 2em;
+    width: 1em;
+    height: 1em;
   }
 }
 
-@keyframes top-scroll {
-  0%{transform: translateY(30%);}
-  100%{transform: translateY(0%);}
-}
-
-@keyframes top-scroll-slideInLeft {
-  100%{transform: translateX(0);}
-}
-
-@keyframes top-scroll-slideInLeft-reverse {
-  100%{transform: translateX(150%);}
+@keyframes top-scroll-arrow {
+  0%{transform: translateY(20%);}
+  100%{transform: translateY(-20%);}
 }
 
 
