--- a/src/css/HomeStyle.scss
+++ b/src/css/HomeStyle.scss
@@ -97,7 +97,6 @@
 
 .info-bg {
   border-radius: 20px 0;
-  filter: drop-shadow(2px 4px 6px grey);
 }
 
 .avatar-container{
@@ -144,7 +143,7 @@
 
 .info nav{
   align-self: flex-end;
-  filter: drop-shadow(2px 4px 6px grey);
+  // filter: drop-shadow(2px 4px 6px grey);
 }
 
 #hire-nav{
