--- a/src/css/Label.scss
+++ b/src/css/Label.scss
@@ -9,7 +9,7 @@
     font-style: italic;
     justify-self: center;
     gap: 0.5em;
-    filter: drop-shadow(2px 4px 6px grey);
+    // filter: drop-shadow(2px 4px 6px grey);
     transform: translateY(100%);
     opacity: 0;
     margin-bottom: 1rem;
