--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -68,6 +68,11 @@ header{
     }
 }
 
+#smodi a{
+    text-decoration: none;
+    color: inherit;
+}
+
 #progress-bar-wrapper{
     height: 5px;
     position: fixed;
