--- a/src/css/HomeStyle.scss
+++ b/src/css/HomeStyle.scss
@@ -243,7 +243,7 @@
 }
 
 .top-scroll-wrapper{
-  border-radius: 5px;
+  border-radius: 5px 0 0 5px;
   width: 2.5rem;
   height: 2.5rem;
   text-align: center;
