--- a/src/css/About.scss
+++ b/src/css/About.scss
@@ -11,7 +11,6 @@ section{
     padding: 20px;
     gap: 1em;
     font-family: ui-monospace;
-    background: #aeaeafc2;
     transition: 1s ease;
 
     @media #{Media.$iphone-portrait}{
@@ -50,6 +49,11 @@ section{
     to{transform: translateX(0); opacity: 1;}
 }
 
+.ab-animation{
+    transform: translate(-50%);
+    opacity: 0;
+}
+
 .about-pic{
     opacity: 0;
     transform: translateX(50%);
@@ -86,10 +90,19 @@ section{
     justify-content: space-between;
     align-items: center;
     row-gap: 3rem;
+}
 
-    section{
-        grid-gap: 1rem;
-    }
+.about-l1{
+    font-size: calc(1em + 2vmin);
+    font-weight: bold;
+}
+
+.about-l3{
+    font-size: calc(.5rem + 2vmin);
+}
+
+.about-info-main{
+    grid-gap: 1rem;
 }
 
 .resume-link-wrap{
@@ -142,6 +155,10 @@ section{
 
 .qr-wrapper{
     display: grid;
+    transition: 1s;
+    cursor: pointer;
+    opacity: 0;
+    transform: translateY(100%);
 
     #qr-logo{
         width: 1.5em;
@@ -149,6 +166,9 @@ section{
     }
     img{
         width: 5em;
+    }
+    &:hover{
+        transform: scale(1.2);
     }
 
     // &::before{
