--- a/src/css/Contact.scss
+++ b/src/css/Contact.scss
@@ -185,6 +185,11 @@ input[type="submit"]{
     width: 25px;
 }
 
+.contact-info a{
+    text-decoration: none;
+    color: inherit;
+}
+
 @keyframes dropFade {
     0%{ transform: translateY(-150%);
         opacity: 0;}
