--- a/src/css/About.scss
+++ b/src/css/About.scss
@@ -15,6 +15,7 @@ section{
 
     @media #{Media.$iphone-portrait}{
         padding: 0;
+        font-size: 1.5rem;
     }
 }
 
@@ -95,6 +96,10 @@ section{
 .about-l1{
     font-size: calc(1em + 2vmin);
     font-weight: bold;
+
+    @media #{Media.$iphone-portrait}, #{Media.$iphone-landscape}{
+        font-size: calc(.5em + 2vmin);;
+    }
 }
 
 .about-l3{
