--- a/src/css/Skills.scss
+++ b/src/css/Skills.scss
@@ -141,4 +141,11 @@
 }
 
 
+// background: linear-gradient(
+// 45deg
+// , #e1e3e2, #ffdcdc);
+//     padding: 10px;
+//     border-right: 10px solid #2bc1c1;
+//     border-radius: 20px;
+
   
