--- a/src/Components/Flyer/Flyer.scss
+++ b/src/Components/Flyer/Flyer.scss
@@ -1,12 +1,12 @@
 @use '../../css/Media';
 
 #Flyer{
-    position: fixed;
+    // position: fixed;
     display: flex;
     margin-right: 0;
     right: 3.5em;
     top: 50%; 
-    z-index: 10;
+    z-index: 20;
 }
 
 .link-flyer{
