--- a/src/css/Media.scss
+++ b/src/css/Media.scss
@@ -30,13 +30,15 @@ $app-bg-light: "linear-gradient(to right, #fff1eb 0%, #{$bg-color-4} 100%)";
 $theme-light: "#2bc1c1";
 $primary-light: "#FF6000";
 $font-dark:"#3c415e";
+$flyers-bg-light:"#b5bebe";
 
 
 //Collor Pallete for Dark Theme
-$app-bg-dark: "#082032";
-$theme-dark: "#FF6000";
+$app-bg-dark: "#000000";
+$theme-dark: "#3e32e4"; //#FF6000";
 $primary-dark: "#FF6000";
 $font-light:"white";
+$flyers-bg-dark:"#d2d2d278";
 
 :export{
     ipadLandscape:$ipad-pro-landscape;
