--- a/src/css/Media.scss
+++ b/src/css/Media.scss
@@ -35,7 +35,7 @@ $flyers-bg-light:"#b5bebe";
 
 //Collor Pallete for Dark Theme
 $app-bg-dark: "#000000";
-$theme-dark: "#3e32e4"; //#FF6000";
+$theme-dark:  "#fc2222"; //"#3e32e4"; //#FF6000";
 $primary-dark: "#FF6000";
 $font-light:"white";
 $flyers-bg-dark:"#d2d2d278";
