--- a/src/css/HomeStyle.scss
+++ b/src/css/HomeStyle.scss
@@ -2,7 +2,7 @@
 
 
 .Home{
-  height: calc(100vh - 200px);
+  min-height: calc(100vh - 200px);
   gap: 5em;
   justify-content: center;
 
@@ -60,8 +60,19 @@
   }
 }
 
+.info-l1-wraper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+}
+
+.big-heading{
+  font-size: clamp(40px, 8vw, 80px);
+  margin: 0;
+}
+
 .info-l1{
-  font-size: 5em;
   width: fit-content;
   opacity: 0;
   animation: drop 1s linear forwards .4s;
@@ -73,7 +84,6 @@
 }
 
 .info-l2{
-  font-size: calc(2em + 2vmin);
   width: fit-content;
   opacity: 0;
   animation: drop 1s linear forwards .2s;
@@ -105,9 +115,12 @@
   width: fit-content;
   border-radius: 50%;
   background : #{Media.$theme-light};
-  animation: avatarScaleIn 1.5s ease-out;
+  animation: avatarScaleIn 1.5s ease-out 1s forwards;
   overflow: hidden;
   transition: transform .5s;
+  border: 2px solid;
+  opacity: 0;
+  transform: scale(.2);
 
   img{
     
@@ -121,6 +134,12 @@
     @media #{Media.$iphone-landscape}, #{Media.$iphone-portrait}{
       max-width: 12em;
     }
+  }
+}
+
+@keyframes avatarScaleIn {
+  to{transform: scale(1);
+        opacity: 1;
   }
 }
 
@@ -198,14 +217,6 @@
 /* #avatar:hover{
   animation: avatarRotate 1.5s linear infinite;
 } */
-
-@keyframes avatarScaleIn {
-  0%{transform: scale(.2);
-      opacity: 0;}
-  100%{transform: scale(1);
-        opacity: 1;
-  }
-}
 
 @keyframes avatarRotate {
   0%{
@@ -314,7 +325,6 @@
 .resume-link-wrap{
   display: flex;
   flex-direction: row;
-  justify-content: center;
   gap: 1em;
 }
 
@@ -374,7 +384,7 @@
   cursor: pointer;
 
   #qr-logo{
-      width: 1.5em;
+      width: 2.5em;
       margin: auto;
   }
   img{
@@ -397,13 +407,11 @@
 }
 
 .resume-qr{
-  right: 0;
-  bottom: 0;
-  width: fit-content;
-  justify-self: center;
-  transition: 1s ease;
-  height: 0;
-  overflow: hidden;
+    width: fit-content;
+    transition: 1s ease;
+    height: 0;
+    overflow: hidden;
+    align-self: center;
   
   img{
       width: 10em;
